--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="59dp"
             android:layout_marginStart="59dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
 
         <EditText
             android:id="@+id/emailEditTextId"
-            android:layout_width="wrap_content"
+            android:layout_width="267dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:layout_marginStart="30dp"
@@ -80,12 +80,11 @@
 
         <EditText
             android:id="@+id/passwordEditTextId"
-            android:layout_width="wrap_content"
+            android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="15dp"
-            android:drawableLeft="@drawable/ic_cadeado"
             android:drawableStart="@drawable/ic_cadeado"
             android:ems="10"
             android:hint="@string/password_text"
@@ -97,14 +96,15 @@
 
         <Button
             android:id="@+id/siginButtonId"
-            android:layout_width="186dp"
-            android:layout_height="30dp"
-            android:layout_marginBottom="80dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="201dp"
+            android:layout_height="44dp"
+            android:layout_marginBottom="64dp"
+            android:layout_marginTop="40dp"
             android:background="@color/greeny_blue"
+            android:elevation="1dp"
             android:text="@string/sigin_button"
             android:textColor="@android:color/background_light"
-            android:textSize="10sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
